--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     background-attachment: fixed;
     margin: 0;
     padding: 0;
+    aspect-ratio: 1 / 1;
 }
 /*----------top menu----------*/
 #head{
@@ -73,11 +74,10 @@ ul li a:hover{
     display: grid;
     align-items: left;
     background-color: white;
-    height: 120%;
+    height: 50%;
     margin-left: 40px;
     margin-right: 40px;
     border-radius: 20px;
-    margin-top: 20px; 
 }
 .head2-1{
     font-family: 'Noto Sans Thai', sans-serif;
@@ -87,7 +87,7 @@ ul li a:hover{
     font-size: 35px;
     color: #feb729;
     text-align: center;
-    padding-top: 10px;
+    margin-bottom: -2000px; 
 }
 .chantrips-info{
     text-align: center;
@@ -99,6 +99,35 @@ ul li a:hover{
 }
 .chantrips-info a:hover{
     color:#feb729;
+}
+.menu-types{
+    background-color: #fff;
+    margin-left: 40px;
+    margin-right: 40px;
+    border-radius: 20px;
+}
+.menu-types h1{
+    text-align: center;
+    font-family: 'Noto Sans Thai', sans-serif;
+    color: #feb729;
+    font-size: 60px;
+    height: 100%;
+}
+.menu-types-items{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+}
+.menu-types-item{
+    text-align: center;
+}
+.menu-types-item img{
+    width: 50%;
+}
+.menu-types-item a{
+    font-size: 30px;
+    text-decoration: none;
+    color: #000;
+    font-family: 'Noto Sans Thai', sans-serif;
 }
 /*----------about website----------*/
 .about-website{
@@ -148,6 +177,7 @@ ul li a:hover{
     margin-left: 40px;
     margin-right: 40px;
     margin-top: -30px;
+    padding-bottom: 20px;
 }
 .logo1{
     display: grid;
@@ -164,7 +194,7 @@ ul li a:hover{
     display: grid;
     align-items: center;
     justify-content: center;
-    margin-top: 40px;
+    
     width: 100%;
     height: 100%;
 }
@@ -175,7 +205,7 @@ ul li a:hover{
     display: grid;
     align-items: center;
     justify-content: left;
-    margin-top: 40px;
+    
     width: 100%;
     height: 100%;
 }
