--- a/style-aboutwebsite.css
+++ b/style-aboutwebsite.css
@@ -145,3 +145,35 @@ ul li a:hover{
     font-size: 35px;
     padding-bottom: 20px;
 }
+/*----------Footer-----------*/
+.footer{
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    background-color: #fff;
+    margin-top: 30px;
+}
+.contact{
+    text-align: right;
+    margin-right: 20px;
+    font-family: 'Noto Sans Thai', sans-serif;
+}
+.contact h3{
+    margin-top:-10px;
+}
+.question{
+    align-self: center;
+    text-align: center;
+}
+.question a{
+    text-decoration: none;
+    color: #feb729;
+    font-family: 'Noto Sans Thai', sans-serif;
+    font-size: 40px;
+}
+.question a:hover{
+    color: #000;
+}
+.address{
+    margin-left: 20px;
+    font-family: 'Noto Sans Thai', sans-serif;
+}
