--- a/style-aboutwebsite.css
+++ b/style-aboutwebsite.css
@@ -7,7 +7,6 @@ body{
     background-attachment: fixed;
     margin: 0;
     padding: 0;
-    aspect-ratio: 1 / 1;
 }
 /*----------top menu----------*/
 #head{
@@ -50,99 +49,55 @@ ul li a:hover{
 .logo img{
     width: 80%;
 }
-/*----------heads----------*/
-.head2{
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    height: 500px;
-}
-.head-words h1{
-    text-align: center;
-    font-size: 75px;
-    color: #feb729;
-    font-family: 'Noto Sans Thai', sans-serif;
-    font: bold;
-}
-.head-words p{
-    text-align: center;
-    font-size: 30px;
-    color: white;
-    font-family: 'Noto Sans Thai', sans-serif;
-}
-.head-words2{
-    display: grid;
-    align-items: left;
-    background-color: white;
-    height: 120%;
-    margin-left: 40px;
-    margin-right: 40px;
-    border-radius: 20px;
-    margin-top: 20px; 
-}
-.head2-1{
-    font-family: 'Noto Sans Thai', sans-serif;
-    margin-left: 30px;
-}
-.head2-1 h1{
-    font-size: 35px;
-    color: #feb729;
-    text-align: center;
-    padding-top: 10px;
-}
-.chantrips-info{
-    text-align: center;
-    font-size: 20px;
-    margin-top: -40px;
-}
-.chantrips-info a{
-    color: #fff;
-}
-.chantrips-info a:hover{
-    color:#feb729;
-}
-.people h1{
-    text-align: center;
-    font-size: 70px;
-    color:#feb729;
-}
-.creater {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-}
-.creater-items{
-    text-align: center;
-    font-family: 'Noto Sans Thai', sans-serif;
-}
-.creater-items h2{
-    font-size: 35px;
-}
-.creater-items h3{
-    font-size: 25px;
-}
 /*---------------body-----------------*/
-.about{
+.title{
     background-color: #fff;
     margin-left: 30px;
     margin-right: 30px;
     border-radius: 20px;
 }
-.title{
+.about-website-head{
     text-align: center;
-    margin-top: 20px;
 }
-.title h1{
-    color: #feb729;
+.about-website-head h1{
+    font-family: 'Noto Sans Thai', sans-serif;
     font-size: 60px;
-    padding-top: 20px;
+    color: #feb729;
+    padding-top: 30px;
 }
-.text{
+.about-website-head p{
+    font-family: 'Noto Sans Thai', sans-serif;
+    font-size: 30px;
     margin-left: 30px;
     margin-right: 30px;
-    margin-top: -30px;
 }
-.text p{
-    font-size: 35px;
+.people{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    text-align: center;
+    font-family: 'Noto Sans Thai', sans-serif;
+}
+.people-head{
+    text-align: center;
+}
+.people-head h1{
+    font-family: 'Noto Sans Thai', sans-serif;
+    font-size: 60px;
+    color: #feb729;
+    padding-top: 30px;
+}
+.people-items img{
+    width: 50%;
+    margin-bottom: -50px;
+    margin-top: -20px;
+}
+.people-items h3{
+    font-size: 40px;
+    padding-top: 20px;
+    margin-bottom: -10px;
+}
+.people-items h2{
+    font-size: 25px;
     padding-bottom: 20px;
 }
 /*----------Footer-----------*/
