--- a/style-aboutwebsite.css
+++ b/style-aboutwebsite.css
@@ -64,12 +64,14 @@ ul li a:hover{
     font-size: 60px;
     color: #feb729;
     padding-top: 30px;
+    margin-bottom: -20px;
 }
 .about-website-head p{
     font-family: 'Noto Sans Thai', sans-serif;
     font-size: 30px;
     margin-left: 30px;
     margin-right: 30px;
+    padding-bottom: 20px;
 }
 .people{
     display: grid;
