--- a/style-aboutwebsite.css
+++ b/style-aboutwebsite.css
@@ -92,6 +92,7 @@ ul li a:hover{
     width: 50%;
     margin-bottom: -50px;
     margin-top: -20px;
+    border-radius: 20px;
 }
 .people-items h3{
     font-size: 40px;
