--- a/น้ำตก-style.css
+++ b/น้ำตก-style.css
@@ -8,6 +8,9 @@ body{
     margin: 0;
     padding: 0;
 }
+html{
+    font-family: 'Noto Sans Thai', sans-serif;
+}
 /*----------top menu----------*/
 #head{
     background-color: #ffffff;
